[package]
name = "og-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.19"
regex = "1.7"
tera = "1"
chromiumoxide = "0.7.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16" }
walkdir = "2.5.0"
serde = { version = "1.0.210", features = ["derive"] }
urlencoding = "2.1.3"
anyhow = "1.0.89"
