[package]
name = "og-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.19"
regex = "1.11.1"
walkdir = "2.5.0"
serde = { version = "1.0.214", features = ["derive"] }
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
rusttype = "0.9"
git2 = "0.19.0"
chrono = "0.4.38"
svg = "0.18.0"
resvg = "0.44.0"
env_logger = "0.11.5"
log = "0.4.22"
rayon = "1.10.0"
once_cell = "1.20.2"

[profile.release]
opt-level = 1
incremental = true